# zktls-att-verification

./: Cargo.toml  README.md
benches/: benchmark.rs
data/: attestation_data.json  attestation_data_without_aes.json  bench1024.json  bench16.json  bench2048.json  bench256.json  config.json  config_without_aes.json  full_http_responses.json  partial_attestation_data.json  partial_http_responses.json  public_data.json
examples/: attestation_example.rs  attestation_example_without_aes.rs  full_http_responses.json  partial_attestation_example.rs  partial_http_responses.json  test_verification.rs  verification_example.rs
src/: aes_utils.rs  aes_verification.rs  attestation_data.rs  ciphertext_verification.rs  ecdsa_utils.rs  lib.rs  main.rs  signature_verification.rs  tls_data.rs  verification_data.rs
