[package]
name = "zktls-att-verification"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
aes-gcm = "0.10.3"
aead = "0.5.2"
aes = "0.8"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
hex= "0.4"
anyhow = "1.0"

k256 = "0.10.0"
sha2 = "0.10.8"
structopt = {version = "0.3", optional =  true}

[dev-dependencies]
criterion = "0.5"

[features]
default = []
bin-feature = ["structopt"]

[profile.bench]
opt-level = 3
debug = false
split-debuginfo = "unpacked"
lto = true

[[bench]]
name = "benchmark"
harness = false

[[bin]]
name = "keygen_k256"
path = "bin/keygen_k256.rs"
required-features = ["bin-feature"]

[[bin]]
name = "sign_k256"
path = "bin/sign_k256.rs"
required-features = ["bin-feature"]

[[example]]
name = "verification_example"
path = "examples/verification_example.rs"

