[package]
name = "zktls-att-verification"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
aes = "0.8"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
hex= "0.4"
anyhow = "1.0"
jsonpath_lib = "0.3"
tiny-keccak = {version = "2.0", features=["sha3", "keccak"]}
secp256k1 = {git = "https://github.com/brevis-network/rust-secp256k1.git", branch = "patch-v1.0.1", features=["recovery", "global-context"]}

sha2 = "0.10.8"
structopt = {version = "0.3", optional =  true}

[patch.crates-io]
ecdsa-core = { git = "https://github.com/brevis-network/signatures", package = "ecdsa", branch = "patch-v1.0.1" }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
bin-feature = ["structopt"]

[profile.bench]
opt-level = 3
debug = false
split-debuginfo = "unpacked"
lto = true

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "verification_example"
path = "examples/verification_example.rs"

[[example]]
name = "attestation_example"
path = "examples/attestation_example.rs"

[[example]]
name = "attestation_example_without_aes"
path = "examples/attestation_example_without_aes.rs"
